fix press logo spacing

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -8567,6 +8567,9 @@ body {
     display: none;
   }
 }
+#tc_logo {
+  margin-top: 10px;
+}
 .btn-home {
   font-size: 20px;
   background-color: #fff;
