--- a/public/assets/less/home.less
+++ b/public/assets/less/home.less
@@ -39,6 +39,9 @@
   display: block;
   padding: 18px 0 0 25px;
 }
+#tc_logo {
+  margin-top: 10px;
+}
 .btn-home {
   font-size: 20px;
   background-color: #fff;
